--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -84,8 +84,6 @@ body {
     display: flex;
     flex: 1;
     overflow: hidden;
-    max-width: 1600px;
-    margin: 0 auto;
     width: 100%;
 }
 
@@ -348,8 +346,6 @@ body {
     display: flex;
     flex: 1;
     overflow: hidden;
-    max-width: 1600px;
-    margin: 0 auto;
     width: 100%;
 }
 
@@ -366,5 +362,14 @@ body {
 
     .form-side {
         padding-inline: 1rem;
+    }
+}
+
+
+/* Prevent stretching on very large screens */
+@media (min-width: 1600px) {
+    .container {
+        max-width: 1600px;
+        margin: 0 auto;
     }
 }
